Adapt tap changers regulation mode to IIDM 1.14
Signed-off-by: Nicolas Rol <nicolas.rol@rte-france.com>